--- a/index.html
+++ b/index.html
@@ -525,16 +525,16 @@ window.addEventListener('scroll', function() {
         });
     });
 </script>
-<div id="home" class="container-1" style="display: flex; align-items: center; justify-content: flex-start; background-image: url('images/man.jpg'); background-size: cover; background-position: left; height: 80vh; padding: 50px;">
+<!---<div id="home" class="container-1" style="display: flex; align-items: center; justify-content: flex-start; background-image: url('images/man.jpg'); background-size: cover; background-position: left; height: 80vh; padding: 50px;">
   <div class="row" style="display: flex; align-items: center; width: 100%; flex-wrap: wrap;">
     
     <!-- Image Section (Hidden on Small Screens) -->
-    <div class="col-2 image-container" style="flex: 1;">
+    <!--<div class="col-2 image-container" style="flex: 1;">
       <img src="images/group2.jpg" alt="Engineering" style="width: 100%; max-width: 500px; height: 140%; display: block; border-radius: 4px;">
     </div>
     
     <!-- Text Content -->
-    <div class="col-2" style="flex: 2; padding-left: 10px;">
+   <!--- <div class="col-2" style="flex: 2; padding-left: 10px;">
       <h1 id="head1" class="floating-text" style="text-transform: uppercase; font-size: 25px; transition: transform 0.3s ease-in-out;">
         "Precision. Innovation. Excellence. Engineering solutions that power the future!"
       </h1>
@@ -544,7 +544,7 @@ window.addEventListener('scroll', function() {
     </div>
 
   </div>
-</div>
+</div>-->
 
 </section> <div class="container">
   <h1>What Our Clients Say</h1>
