--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
   <title>Egold Technology</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
-   <link type="stylesheet"  href="service.css">
+   <link type="stylesheet"  href="serviceStyle.css">
 </head>
 <body>
 
