--- a/service.html
+++ b/service.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Egold Technology</title>
+ <link rel="icon" type="image/png" href="images/egoldtech.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
-   <link type="stylesheet"  href="serviceStyle.css">
+   <link rel="stylesheet"  href="serviceStyle.css">
 </head>
 <body>
 
@@ -42,7 +43,7 @@
   <header class="header">
     <div class="container">
       <a href="#" class="logo">
-        <img src="image/egold.png" alt="Egold Technology">
+        <img src="images/egold logo.png" alt="Egold Technology">
       </a>
       <h1 id="headerTitle">Professional Security Solutions</h1>
       <p id="headerSubtitle">Comprehensive protection and automation services for modern needs</p>
@@ -325,7 +326,7 @@
     <div class="container">
       <div class="footer-container">
         <div class="footer-section about">
-          <img src="images/egold-logo-white.png" alt="Egold Technology">
+          <img src="images/egold logo.png" alt="Egold Technology">
           <p id="footerAbout">Egold Technology provides professional security and automation services to help businesses and homeowners protect their assets with cutting-edge solutions.</p>
         </div>
         
