--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" as="style">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     
-   >
+   <li rel="stylesheet" href="styles.css">
 </head>
 
 <body>
