--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-up<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@ up<!DOCTYPE html>
     <meta name="keywords" content="solar installation, CCTV, construction, renewable energy, security systems">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
-    <title>Egold Technology - Construction & Security Solutions</title>
+    <title>Egold Technology</title>
     <link rel="icon" type="images/png" href="images/egoldtech.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,7 +24,7 @@ up<!DOCTYPE html>
                 <ul class="nav-links">
                     <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="service.html">Services</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#feedback" class="btn">Feedback</a></li>
@@ -129,7 +129,7 @@ up<!DOCTYPE html>
     <section class="services-section" id="services">
         <div class="section-container">
             <div class="section-title">
-                <h2>Our Services</h2>
+                <h2 style="color: white">Our Services</h2>
                 <p>We offer comprehensive solutions to meet all your technological and engineering needs</p>
             </div>
             
