--- a/service.html
+++ b/service.html
@@ -271,9 +271,9 @@
         <div class="testimonials-grid">
           <div class="testimonial-card">
             <div class="testimonial-header">
-              <div class="testimonial-avatar">JD</div>
+              <div class="testimonial-avatar">K</div>
               <div>
-                <div class="testimonial-author">John Doe</div>
+                <div class="testimonial-author">Mr. Kenneth</div>
                 <div class="testimonial-rating">★★★★★</div>
               </div>
             </div>
@@ -284,9 +284,9 @@
 
           <div class="testimonial-card">
             <div class="testimonial-header">
-              <div class="testimonial-avatar">AS</div>
+              <div class="testimonial-avatar">T</div>
               <div>
-                <div class="testimonial-author">Alice Smith</div>
+                <div class="testimonial-author">Mrs. Tekena</div>
                 <div class="testimonial-rating">★★★★★</div>
               </div>
             </div>
@@ -297,9 +297,9 @@
 
           <div class="testimonial-card">
             <div class="testimonial-header">
-              <div class="testimonial-avatar">RB</div>
+              <div class="testimonial-avatar">D</div>
               <div>
-                <div class="testimonial-author">Robert Brown</div>
+                <div class="testimonial-author">Mr. Daniel</div>
                 <div class="testimonial-rating">★★★★★</div>
               </div>
             </div>
@@ -350,9 +350,9 @@
           <h3 id="footerSocialTitle">Connect With Us</h3>
           <div class="social-links">
             <a href="#"><i class="mdi mdi-facebook"></i></a>
-            <a href="#"><i class="mdi mdi-twitter"></i></a>
+            <a href="#"><i class="mdi mdi-tiktok"></i></a>
             <a href="#"><i class="mdi mdi-instagram"></i></a>
-            <a href="#"><i class="mdi mdi-linkedin"></i></a>
+            <a href="#"><i class="mdi mdi-whatsapp"></i></a>
           </div>
         </div>
       </div>
