--- a/service.html
+++ b/service.html
@@ -349,10 +349,10 @@
         <div class="footer-section social">
           <h3 id="footerSocialTitle">Connect With Us</h3>
           <div class="social-links">
-            <a href="#"><i class="mdi mdi-facebook"></i></a>
-            <a href="#"><i class="mdi mdi-tiktok"></i></a>
-            <a href="#"><i class="mdi mdi-instagram"></i></a>
-            <a href="#"><i class="mdi mdi-whatsapp"></i></a>
+            <a href="https://www.facebook.com/share/18fhab85ga/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.tiktok.com/@user55362234?_t=ZM-8uY6FRVj5fS&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/erunsdlegend?igsh=OXdweDF5YTBucjhx" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/2347030842893" target="_blank"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
       </div>
