--- a/academy.html
+++ b/academy.html
@@ -1048,7 +1048,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="image/egoldlog0.png" alt="egold logo">
+                 <img src="images/egold logo.png" alt="Egold Technology Logo">
               <span class="logo-text">Egold Academy</span>
             </div>
             
