--- a/academy.html
+++ b/academy.html
@@ -1031,7 +1031,7 @@
                 <h3>Egold Technology Academy</h3>
                 <p>Empowering individuals with practical technology skills for the digital economy.</p>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/share/18fhab85ga/" target="_blank">
+                    <a href="https://www.facebook.com/share/18fhab85ga/" target="_blank"><i class="fab fa-facebook"></i>
                     <a href="https://www.tiktok.com/@user55362234?_t=ZM-8uY6FRVj5fS&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
                     <a href="https://www.instagram.com/erunsdlegend?igsh=OXdweDF5YTBucjhx" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://wa.me/2347030842893" target="_blank"><i class="fab fa-whatsapp"></i></a>
