--- a/academy.html
+++ b/academy.html
@@ -1911,7 +1911,7 @@
                     <div class="progress-step" data-step="3">3</div>
                 </div>
                 
-                <form id="studentRegistrationForm">
+                <form id="studentRegistrationForm" action="https://formspree.io/f/mdklnorv" method="POST">
                     <!-- Step 1: Personal Info -->
                     <div class="form-step active" data-step="1">
                         <div class="form-group">
