--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <div class="contact-info">
                     <p><i class="fas fa-map-marker-alt"></i> 106 Samphino Road, Yenagoa, Bayelsa</p>
                     <p><i class="fas fa-phone"></i> <a href="tel:+2347030842893" style="color: #fff; text-decoration: none;">+234 703 084 2893</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:info.egoldtech@gmail.com" style="color: #fff; text-decoration: none;">info.egoldtech@gmail.com</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:info.egoldtech@gmail.com" style="color: #fff; text-decoration: none;">egoldtechnologycopany@gmail.com</a></p>
                 </div>
                 
                 <div class="map-container">
