--- a/academy.html
+++ b/academy.html
@@ -1978,7 +1978,21 @@
                     </div>
                 </form>
             </div>
-            
+            <form
+  action="https://formspree.io/f/mdklnorv"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
             <!-- Tutor Form -->
             <div class="form-container" id="tutorForm">
                 <div class="progress-bar">
