--- a/index.html
+++ b/index.html
@@ -11,8 +11,63 @@
     <link rel="icon" type="images/png" href="images/egoldtech.png">
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
 
+        .preloader-content {
+            text-align: center;
+        }
+
+        .logo-loader {
+            width: 120px;
+            height: 120px;
+            animation: pulse 2s infinite ease-in-out;
+            margin-bottom: 1rem;
+        }
+
+        .loader-text {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: var(--primary);
+            letter-spacing: 2px;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(0.95); opacity: 0.7; }
+            50% { transform: scale(1.05); opacity: 1; }
+            100% { transform: scale(0.95); opacity: 0.7; }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+ 
+</style>
 <body>
+     <div id="preloader">
+        <div class="preloader-content">
+            <div class="logo-loader">
+                <img src="images/egold logo.png" alt="egold logo">
+                    <circle cx="50" cy="50" r="45" fill="#2563eb" opacity="0.7"/>
+                    <text x="50" y="58" text-anchor="middle" fill="white" font-size="16" font-weight="bold">EGOLD</text>
+                </svg>
+            </div>
+            <div class="loader-text">LOADING</div>
+        </div>
+    </div>
+
     <!-- Header -->
     <header id="header">
         <div class="logo">
@@ -542,6 +597,16 @@
     </div>
     
     <script>
+        / Preloader
+        window.addEventListener('load', function() {
+            const preloader = document.getElementById('preloader');
+            setTimeout(function() {
+                preloader.style.opacity = '0';
+                setTimeout(function() {
+                    preloader.style.display = 'none';
+                }, 600);
+            }, 2000);
+        });
 // Generate floating shapes
 function createFloatingShapes() {
     const container = document.getElementById('floatingShapes');
