--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
      <div id="preloader">
         <div class="preloader-content">
             <div class="logo-loader">
-                <img src="images/egold logo.png" alt="egold logo">
+                <img src="images/egoldtech.png" alt="egold logo">
                     <circle cx="50" cy="50" r="45" fill="#2563eb" opacity="0.7"/>
                     <text x="50" y="58" text-anchor="middle" fill="white" font-size="16" font-weight="bold">EGOLD</text>
                 </svg>
