--- a/academy.html
+++ b/academy.html
@@ -1207,7 +1207,7 @@
     <div id="preloader">
         <div class="preloader-content">
             <div class="logo-loader">
-                <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <img src="images/egoldtech.png" alt="egoldtech.png">
                     <circle cx="50" cy="50" r="45" fill="#2563eb" opacity="0.7"/>
                     <text x="50" y="58" text-anchor="middle" fill="white" font-size="16" font-weight="bold">EGOLD</text>
                 </svg>
